--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,8 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
-      <link rel="stylesheet" href="app/managelocations/managelocations.css">
+      <link rel="stylesheet" href="app/manageVenues/manageVenues.css">
+      <link rel="stylesheet" href="app/meetup/meetup.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -77,8 +78,10 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
-          <script src="app/managelocations/managelocations.controller.js"></script>
-          <script src="app/managelocations/managelocations.js"></script>
+          <script src="app/manageVenues/manageVenues.controller.js"></script>
+          <script src="app/manageVenues/manageVenues.js"></script>
+          <script src="app/meetup/meetup.controller.js"></script>
+          <script src="app/meetup/meetup.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/footer/footer.controller.js"></script>
@@ -87,5 +90,6 @@
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 </body>
 </html>
